--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <div id="app"></div>
-  <script src="./assets/js/index.js"></script>
+  <script src="assets/js/index.js"></script>
 </body>
 
 </html>
